// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods with side-effects changeBet create a bet with given number and set it to currentBet 1`] = `
Object {
  "amount": 40,
  "destination": "lo",
  "number": 20,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 1 Hi Chance of Winning 99% Payout: 1.01x 1`] = `
Object {
  "chance": 99,
  "payout": 1.01,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 1 Lo Chance of Winning 1% Payout: 100x 1`] = `
Object {
  "chance": 1,
  "payout": 100,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 10 Hi Chance of Winning 90% Payout: 1.11x 1`] = `
Object {
  "chance": 90,
  "payout": 1.11,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 10 Lo Chance of Winning 10% Payout: 10x 1`] = `
Object {
  "chance": 10,
  "payout": 10,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 50 Hi Chance of Winning: 50% Payout: 2x  1`] = `
Object {
  "chance": 50,
  "payout": 2,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 50 Lo Chance of Winning: 50% Payout: 2x  1`] = `
Object {
  "chance": 50,
  "payout": 2,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 99 Hi Chance of Winning 1% Payout: 100x 1`] = `
Object {
  "chance": 1,
  "payout": 100,
}
`;

exports[`pure methods calculateForecast: returns expected chance and payout Bet 100 Lo Chance of Winning 99% Payout: 1.01x 1`] = `
Object {
  "chance": 99,
  "payout": 1.01,
}
`;

exports[`pure methods createBet: returns a bet object 1`] = `
Object {
  "amount": 40,
  "destination": "lo",
  "number": 1,
}
`;
